Add grouped daily reward tiers