@@ -8,6 +8,7 @@ import java.time.LocalDate;
 import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
 import java.time.format.DateTimeParseException;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Locale;
@@ -36,16 +37,17 @@ public final class DailyRewardsConfigLoader {
 
         DailyRewardsConfig.Messages messages = new DailyRewardsConfig.Messages(
                 config.getString("messages.prefix", "&c&lDaily Rewards &8> "),
-                config.getString("messages.no-permission", "&cNie masz uprawnień."),
-                config.getString("messages.player-only", "&cTa komenda jest dostępna tylko dla gracza."),
-                config.getString("messages.usage", "&7Użycie: &f/hexdailyrewards reload"),
-                config.getString("messages.reload-success", "&aPrzeładowano konfigurację."),
-                config.getString("messages.reload-failed", "&cNie udało się przeładować konfiguracji. Sprawdź konsolę."),
-                config.getString("messages.disabled", "&cDaily Rewards są obecnie wyłączone."),
-                config.getString("messages.reward-claimed-chat", "&aOdebrałeś dzisiejszą nagrodę."),
-                config.getString("messages.reward-claimed-actionbar", "&aOdebrano codzienną nagrodę!"),
-                config.getString("messages.already-claimed-actionbar", "&eDzisiejsza nagroda została już odebrana. Wróć za &6{time}&e."),
-                config.getString("messages.claim-error", "&cNie udało się zapisać odbioru nagrody. Zgłoś to administracji."),
+                config.getString("messages.no-permission", "&cNie masz uprawnien."),
+                config.getString("messages.player-only", "&cTa komenda jest dostepna tylko dla gracza."),
+                config.getString("messages.usage", "&7Uzycie: &f/hexdailyrewards reload"),
+                config.getString("messages.reload-success", "&aPrzeladowano konfiguracje."),
+                config.getString("messages.reload-failed", "&cNie udalo sie przeladowac konfiguracji. Sprawdz konsole."),
+                config.getString("messages.disabled", "&cDaily Rewards sa obecnie wylaczone."),
+                config.getString("messages.reward-claimed-chat", "&aOdebrales dzisiejsza nagrode."),
+                config.getString("messages.reward-claimed-actionbar", "&aOdebrano codzienna nagrode!"),
+                config.getString("messages.already-claimed-actionbar", "&eDzisiejsza nagroda zostala juz odebrana. Wroc za &6{time}&e."),
+                config.getString("messages.reward-locked-actionbar", "&cTa skrzynka nie jest dostepna dla twojej rangi."),
+                config.getString("messages.claim-error", "&cNie udalo sie zapisac odbioru nagrody. Zglos to administracji."),
                 config.getString("messages.no-reward-configured", "&cBrak skonfigurowanej nagrody na dzisiaj.")
         );
 
@@ -57,7 +59,9 @@ public final class DailyRewardsConfigLoader {
                 config.getString("placeholders.status-available", "Do odebrania"),
                 config.getString("placeholders.status-claimed", "Odebrane"),
                 config.getString("placeholders.player-status-available", "&aDo odebrania"),
-                config.getString("placeholders.player-status-claimed", "&cOdebrany")
+                config.getString("placeholders.player-status-claimed", "&cOdebrano"),
+                config.getString("placeholders.hologram-status-available", "&aDo odebrania"),
+                config.getString("placeholders.hologram-status-claimed", "&cOdebrano")
         );
 
         DailyRewardsConfig.Sounds sounds = new DailyRewardsConfig.Sounds(
@@ -71,27 +75,127 @@ public final class DailyRewardsConfigLoader {
                 config.getBoolean("reward.refresh-gui-after-claim", true)
         );
 
-        DailyRewardsConfig.RewardsCalendar rewardsCalendar = calendar(config, logger);
+        DailyRewardsConfig.RewardsCalendar legacyCalendar = calendar(
+                config.getConfigurationSection("rewards-calendar"),
+                null,
+                "rewards-calendar",
+                logger
+        );
+        Map<String, DailyRewardsConfig.RewardGroup> rewardGroups = rewardGroups(config, legacyCalendar, logger);
+        DailyRewardsConfig.RewardsCalendar defaultCalendar = rewardGroups.getOrDefault("default",
+                rewardGroups.values().iterator().next()).rewardsCalendar();
         DailyRewardsConfig.Gui gui = gui(config, logger);
-        return new DailyRewardsConfig(enabled, zone, hexNpc, timeFormat, messages, placeholderTexts, sounds, reward, rewardsCalendar, gui);
+        return new DailyRewardsConfig(enabled, zone, hexNpc, timeFormat, messages, placeholderTexts, sounds,
+                reward, defaultCalendar, rewardGroups, gui);
     }
 
-    private DailyRewardsConfig.RewardsCalendar calendar(FileConfiguration config, Logger logger) {
-        LocalDate fallbackStart = LocalDate.of(2026, 7, 20);
-        LocalDate startDate = date(config.getString("rewards-calendar.start-date", fallbackStart.toString()),
-                fallbackStart, logger);
-        int cycleDays = config.getInt("rewards-calendar.cycle-days", 14);
-        if (cycleDays < 1) {
-            logger.warning("HexDailyRewards: rewards-calendar.cycle-days must be >= 1. Using 14.");
-            cycleDays = 14;
+    private Map<String, DailyRewardsConfig.RewardGroup> rewardGroups(FileConfiguration config,
+                                                                     DailyRewardsConfig.RewardsCalendar legacyCalendar,
+                                                                     Logger logger) {
+        Map<String, DailyRewardsConfig.RewardGroup> groups = new LinkedHashMap<>();
+        ConfigurationSection groupsSection = config.getConfigurationSection("reward-groups");
+        if (groupsSection == null) {
+            DailyRewardsConfig.RewardGroup fallback = rewardGroup("default", null, legacyCalendar, 0, logger);
+            groups.put(fallback.id(), fallback);
+            return Collections.unmodifiableMap(groups);
         }
 
-        List<String> defaultLore = config.contains("rewards-calendar.default-lore")
-                ? config.getStringList("rewards-calendar.default-lore")
+        int index = 0;
+        for (String key : groupsSection.getKeys(false)) {
+            DailyRewardsConfig.RewardGroup group = rewardGroup(
+                    key,
+                    groupsSection.getConfigurationSection(key),
+                    legacyCalendar,
+                    index++,
+                    logger
+            );
+            if (groups.containsKey(group.id())) {
+                logger.warning("HexDailyRewards: duplicate reward group id '" + group.id() + "'. Skipping " + key + ".");
+                continue;
+            }
+            groups.put(group.id(), group);
+        }
+
+        if (groups.isEmpty()) {
+            DailyRewardsConfig.RewardGroup fallback = rewardGroup("default", null, legacyCalendar, 0, logger);
+            groups.put(fallback.id(), fallback);
+        }
+        return Collections.unmodifiableMap(groups);
+    }
+
+    private DailyRewardsConfig.RewardGroup rewardGroup(String key,
+                                                       ConfigurationSection section,
+                                                       DailyRewardsConfig.RewardsCalendar legacyCalendar,
+                                                       int index,
+                                                       Logger logger) {
+        String id = normalizeGroupId(section == null ? key : section.getString("id", key), key);
+        boolean enabled = section == null || section.getBoolean("enabled", true);
+        String displayName = section == null
+                ? defaultGroupDisplayName(id)
+                : section.getString("display-name", defaultGroupDisplayName(id));
+        List<String> ranks = section != null && section.contains("ranks")
+                ? section.getStringList("ranks")
+                : defaultRanks(id);
+        List<String> permissions = section != null && section.contains("permissions")
+                ? section.getStringList("permissions")
+                : defaultPermissions(id);
+        int priority = section == null
+                ? defaultGroupPriority(id, index)
+                : section.getInt("priority", defaultGroupPriority(id, index));
+        boolean fallbackAccess = section == null
+                ? "default".equals(id)
+                : section.getBoolean("fallback-access", "default".equals(id));
+        int slot = section == null
+                ? defaultGroupSlot(id, index)
+                : section.getInt("slot", defaultGroupSlot(id, index));
+        Material frameMaterial = section == null
+                ? defaultFrameMaterial(id)
+                : material(section.getString("frame-material", defaultFrameMaterial(id).name()), defaultFrameMaterial(id), logger);
+        List<Integer> frameColumns = section != null && section.contains("frame-columns")
+                ? columns(section.getIntegerList("frame-columns"), defaultFrameColumns(id, index), logger)
+                : defaultFrameColumns(id, index);
+        String frameName = section == null ? "" : section.getString("frame-name", "");
+        List<String> frameLore = section != null && section.contains("frame-lore")
+                ? section.getStringList("frame-lore")
+                : List.of();
+        boolean frameHideTooltip = section == null || section.getBoolean("frame-hide-tooltip", true);
+        ConfigurationSection calendarSection = section == null ? null : section.getConfigurationSection("rewards-calendar");
+        DailyRewardsConfig.RewardsCalendar calendar = calendar(
+                calendarSection,
+                "default".equals(id) ? legacyCalendar : null,
+                "reward-groups." + id + ".rewards-calendar",
+                logger
+        );
+        return new DailyRewardsConfig.RewardGroup(id, enabled, displayName, List.copyOf(ranks),
+                List.copyOf(permissions), priority, fallbackAccess, slot, frameMaterial,
+                List.copyOf(frameColumns), frameName, List.copyOf(frameLore), frameHideTooltip, calendar);
+    }
+
+    private DailyRewardsConfig.RewardsCalendar calendar(ConfigurationSection section,
+                                                       DailyRewardsConfig.RewardsCalendar fallback,
+                                                       String label,
+                                                       Logger logger) {
+        if (section == null && fallback != null) {
+            return fallback;
+        }
+
+        LocalDate fallbackStart = fallback == null ? LocalDate.of(2026, 7, 20) : fallback.startDate();
+        int fallbackCycleDays = fallback == null ? 14 : fallback.cycleDays();
+        LocalDate startDate = section == null
+                ? fallbackStart
+                : date(section.getString("start-date", fallbackStart.toString()), fallbackStart, logger);
+        int cycleDays = section == null ? fallbackCycleDays : section.getInt("cycle-days", fallbackCycleDays);
+        if (cycleDays < 1) {
+            logger.warning("HexDailyRewards: " + label + ".cycle-days must be >= 1. Using " + fallbackCycleDays + ".");
+            cycleDays = fallbackCycleDays;
+        }
+
+        List<String> defaultLore = section != null && section.contains("default-lore")
+                ? section.getStringList("default-lore")
                 : List.of("&7Nagroda dnia: &f{reward_name}");
 
         Map<Integer, DailyRewardsConfig.RewardDefinition> days = new LinkedHashMap<>();
-        ConfigurationSection daysSection = config.getConfigurationSection("rewards-calendar.days");
+        ConfigurationSection daysSection = section == null ? null : section.getConfigurationSection("days");
         if (daysSection != null) {
             for (String key : daysSection.getKeys(false)) {
                 int day = parseDayKey(key, logger);
@@ -103,7 +207,7 @@ public final class DailyRewardsConfigLoader {
         }
 
         Map<LocalDate, DailyRewardsConfig.RewardDefinition> overrides = new LinkedHashMap<>();
-        ConfigurationSection overridesSection = config.getConfigurationSection("rewards-calendar.date-overrides");
+        ConfigurationSection overridesSection = section == null ? null : section.getConfigurationSection("date-overrides");
         if (overridesSection != null) {
             for (String key : overridesSection.getKeys(false)) {
                 LocalDate date = date(key, null, logger);
@@ -114,7 +218,8 @@ public final class DailyRewardsConfigLoader {
             }
         }
 
-        return new DailyRewardsConfig.RewardsCalendar(startDate, cycleDays, Map.copyOf(days), Map.copyOf(overrides));
+        return new DailyRewardsConfig.RewardsCalendar(startDate, cycleDays,
+                Collections.unmodifiableMap(days), Collections.unmodifiableMap(overrides));
     }
 
     private DailyRewardsConfig.RewardDefinition rewardDefinition(String id,
@@ -140,25 +245,33 @@ public final class DailyRewardsConfigLoader {
     }
 
     private DailyRewardsConfig.Gui gui(FileConfiguration config, Logger logger) {
-        int size = config.getInt("gui.size", 27);
+        int size = config.getInt("gui.size", 45);
         if (size < 9 || size > 54 || size % 9 != 0) {
-            logger.warning("HexDailyRewards: gui.size must be a multiple of 9 between 9 and 54. Using 27.");
-            size = 27;
+            logger.warning("HexDailyRewards: gui.size must be a multiple of 9 between 9 and 54. Using 45.");
+            size = 45;
         }
         DailyRewardsConfig.GuiItem filler = item(config.getConfigurationSection("gui.filler"),
                 true, 0, Material.BLACK_STAINED_GLASS_PANE, false, "", List.of(), true, logger);
         DailyRewardsConfig.GuiItems items = new DailyRewardsConfig.GuiItems(
                 item(config.getConfigurationSection("gui.items.available"), true, 13, Material.CHEST, true,
-                        "{reward_name}", List.of("{reward_lore}"), false, logger),
+                        "{group_name}",
+                        List.of("&fNagroda: {reward_name}", "", "&fStatus: {player_status}",
+                                "&fNastepna nagroda za: {time}"), false, logger),
                 item(config.getConfigurationSection("gui.items.claimed"), true, 13, Material.MINECART, true,
-                        "{reward_name}", List.of("{reward_lore}"), false, logger),
-                item(config.getConfigurationSection("gui.items.status-available"), true, 26, Material.LIME_DYE, false,
-                        "&fStatus: &aDo odebrania", List.of("&7Do następnej nagrody: &f{time}"), false, logger),
-                item(config.getConfigurationSection("gui.items.status-claimed"), true, 26, Material.RED_DYE, false,
-                        "&fStatus: &cOdebrane", List.of("&7Do następnej nagrody: &f{time}"), false, logger),
-                item(config.getConfigurationSection("gui.items.info"), false, 15, Material.CLOCK, false,
-                        "&6Dzisiejsza nagroda", List.of("&7Reset: &f{reset_time}"), false, logger),
-                item(config.getConfigurationSection("gui.items.close"), true, 18, Material.BARRIER, false,
+                        "{group_name}",
+                        List.of("&fNagroda: {reward_name}", "", "&fStatus: {player_status}",
+                                "&fNastepna nagroda za: {time}"), false, logger),
+                item(config.getConfigurationSection("gui.items.locked"), true, 13, Material.GRAY_DYE, true,
+                        "{group_name}",
+                        List.of("&fNagroda: {reward_name}", "", "&fStatus: &cNiedostepna",
+                                "&fNastepna nagroda za: -"), false, logger),
+                item(config.getConfigurationSection("gui.items.status-available"), false, 31, Material.LIME_DYE, false,
+                        "&fStatus: &aDo odebrania", List.of("&7Do nastepnego resetu: &f{time}"), false, logger),
+                item(config.getConfigurationSection("gui.items.status-claimed"), false, 31, Material.RED_DYE, false,
+                        "&fStatus: &cOdebrane", List.of("&7Do nastepnej nagrody: &f{time}"), false, logger),
+                item(config.getConfigurationSection("gui.items.info"), false, 4, Material.CLOCK, false,
+                        "&6Daily Rewards", List.of("&7Wybierz skrzynke dostepna", "&7dla swojej rangi."), false, logger),
+                item(config.getConfigurationSection("gui.items.close"), false, 40, Material.BARRIER, false,
                         "&cZamknij", List.of(), false, logger)
         );
         return new DailyRewardsConfig.Gui(size, config.getString("gui.title", "&cDaily Rewards"), filler, items);
@@ -185,6 +298,85 @@ public final class DailyRewardsConfigLoader {
                 section.contains("lore") ? section.getStringList("lore") : lore,
                 section.getBoolean("hide_tooltip", section.getBoolean("hide-tooltip", hideTooltip))
         );
+    }
+
+    private String normalizeGroupId(String raw, String fallback) {
+        String normalized = raw == null ? "" : raw.toLowerCase(Locale.ROOT).trim().replaceAll("[^a-z0-9_-]", "_");
+        if (!normalized.isBlank()) {
+            return normalized;
+        }
+        return fallback == null || fallback.isBlank() ? "default" : fallback.toLowerCase(Locale.ROOT);
+    }
+
+    private String defaultGroupDisplayName(String id) {
+        return switch (id) {
+            case "vip" -> "&6VIP / SVIP";
+            case "elite", "elita" -> "&dElita";
+            default -> "&aGracze / Media";
+        };
+    }
+
+    private List<String> defaultRanks(String id) {
+        return switch (id) {
+            case "vip" -> List.of("vip", "svip");
+            case "elite", "elita" -> List.of("elita");
+            default -> List.of("default", "media");
+        };
+    }
+
+    private List<String> defaultPermissions(String id) {
+        return switch (id) {
+            case "vip" -> List.of("hexdailyrewards.rank.vip", "hexdailyrewards.rank.svip", "group.vip", "group.svip");
+            case "elite", "elita" -> List.of("hexdailyrewards.rank.elita", "hexdailyrewards.rank.elite", "group.elita", "group.elite");
+            default -> List.of("hexdailyrewards.rank.default", "hexdailyrewards.rank.media", "group.default", "group.media");
+        };
+    }
+
+    private int defaultGroupPriority(String id, int index) {
+        return switch (id) {
+            case "vip" -> 20;
+            case "elite", "elita" -> 30;
+            default -> index <= 0 ? 10 : 10 + (index * 10);
+        };
+    }
+
+    private int defaultGroupSlot(String id, int index) {
+        return switch (id) {
+            case "vip" -> 22;
+            case "elite", "elita" -> 25;
+            default -> index <= 0 ? 19 : 19 + (index * 3);
+        };
+    }
+
+    private Material defaultFrameMaterial(String id) {
+        return switch (id) {
+            case "vip" -> Material.YELLOW_STAINED_GLASS_PANE;
+            case "elite", "elita" -> Material.LIGHT_BLUE_STAINED_GLASS_PANE;
+            default -> Material.BLACK_STAINED_GLASS_PANE;
+        };
+    }
+
+    private List<Integer> defaultFrameColumns(String id, int index) {
+        return switch (id) {
+            case "vip" -> List.of(4, 5, 6);
+            case "elite", "elita" -> List.of(7, 8, 9);
+            default -> index <= 0 ? List.of(1, 2, 3) : List.of(1, 2, 3);
+        };
+    }
+
+    private List<Integer> columns(List<Integer> configured, List<Integer> fallback, Logger logger) {
+        if (configured == null || configured.isEmpty()) {
+            return fallback;
+        }
+        List<Integer> out = configured.stream()
+                .filter(column -> column != null && column >= 1 && column <= 9)
+                .distinct()
+                .toList();
+        if (out.isEmpty()) {
+            logger.warning("HexDailyRewards: frame-columns must contain column numbers from 1 to 9. Using defaults.");
+            return fallback;
+        }
+        return out;
     }
 
     private boolean isBlank(List<String> lines) {
